[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "email-automation-mcp"
version = "1.0.0"
description = "MEOK AI Labs — Send and read emails via standard SMTP/IMAP protocols. Works with any email"
authors = [{name="MEOK AI Labs", email="nicholas@meok.ai"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["mcp", "mcp-server", "model-context-protocol", "claude", "ai-tools", "meok-ai-labs", "email-automation", "email-marketing", "email-campaigns", "smtp", "newsletter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/email-automation-mcp"
Documentation = "https://meok.ai/docs/email-automation-mcp"
"Bug Tracker" = "https://github.com/CSOAI-ORG/email-automation-mcp/issues"
